--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="home-content-section">
       <h1>HI, I'm <span>Makayla</span></h1>
       <h3 class="typing"> I am <span></span></h3>
-      <p> A creative and adaptable developer dedicated to crafting engaging web experiences. My passion lies in building interactive digital solutions, leveraging skills in Java, JavaScript, and UI/UX principles.</p>
+      <p> A creative and adaptable developer dedicated to crafting engaging web experiences. My passion lies in building interactive digital experinces, leveraging skills in Java and growing skill in HTML,CSS, and bit in JavaScript, and ultimately understanding UI/UX principles through my journey.</p>
       <div class="socials">
         <a href="https://www.linkedin.com/in/makayla-s-309921268/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/Nicole-coder243" target="_blank"><i class="fa-brands fa-github"></i></a>
