--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
           <div class="link"><a href="index.html">Home</a></div>
           <div class="link"><a href="about.html">About</a></div>
           <div class="link"><a href="work-projects.html">Works & Projects</a></div>
-          <div class="link"><a href="blogs.html">Blogs</a></div>
+          <div class="link"><a href="programmmning projects.html">Other Projects</a></div>
           <div class="link"><a href="contact.html">Contact</a></div>
         </div>
       </div>
