--- a/programmming projects.html
+++ b/programmming projects.html
@@ -30,7 +30,7 @@
   <section class="">
     <div class="work-projects-content">
       <h1>Other Projects</h1>
-      <p>Welcome to my Portifilo! This "other project section" is my java conceptual projects on java programming journey.</p>
+      <p>Welcome to my Portifilo! This "other project section" is my java conceptual projects on  my java programming journey.</p>
       <!--project section img and text-->
       <div class="project-section">
         <div class="project">
