--- a/work-projects.html
+++ b/work-projects.html
@@ -29,56 +29,122 @@
   </header>
   <section class="work-projects">
     <div class="work-projects-content">
-        <h1>Works & Projects</h1>
-        <p>Welcome to my Portifilo!</p>
-        <!--project section img and text-->
-        <div class="project-section">
-          <div class="project">
-        <h3> A Dose of Reveal (LLC Website Contribution) AI Powered website</h3>
-        <img src="https://i.postimg.cc/8cG91m5m/ador-web.png" alt="project five">
-        <p>A Dose of Reveal is a dynamic podcast business website where I provide ongoing development and maintenance. As my first experience working with an AI-powered site builder, I frequently implement daily updates and content refinements based on the CEO's vision, ensuring a seamless digital presence.</p>
-        <a href="https://adoseofreveal.org/" class="btn" target="_blank">Explore the Site Here</a>
-       </div>
-    <div class="project">
-        <h3>A Dose of Reveal Wellness - Shopify E-commerence Shop</h3>
-        <img src="https://i.postimg.cc/05H712Bb/Capture90.png" alt="project six">
-        <p>Recognizing A Dose of Reveal's need for a robust online presence for their wellness products, I took the initiative to independently learn and implement a full Shopify e-commerce solution. This project demonstrates my ability to rapidly acquire new platform knowledge as I successfully designed, built, and launched the store from the ground up, managing everything from product catalog and payment integration to theme customization and order processing workflows.</p>
-        <a href="https://adoseofrevealwellness.myshopify.com/" class="btn" target="_blank">Visit The Live Store</a>
-        </div>
-            <div class="project">
-                <h3>Image Slider Show</h3>
-              <img src="https://i.postimg.cc/tgkMrx9v/Screenrecording2025-06-1512-24-24-PM-ezgif-com-video-to-gif-converter.gif" alt="project one">
-              <p> This is a automated Flowers slider show made with HTML and CSS. It showcases a beautiful collection of flowers with smooth transitions and animations. The slider automatically cycles through the images.</p>
-              </p>
-              <a href="https://codepen.io/Nicole-coder243/pen/ogXeOBv" class="btn" target="_blank">View Image Slider</a>
+      <h1>Works & Projects</h1>
+      <p class="p-section">Welcome to my Portifilo!</p>
+      <!-- Slider container with arrows -->
+      <div class="slider">
+        <button class="slider-arrow left">&#8592;</button>
+        <div class="slides">
+          <!-- Slide 1: Client Works -->
+          <section class="project-group slide active">
+            <h2>Client Works</h2>
+            <div class="project-section">
+              <div class="project">
+                <h3> A Dose of Reveal (LLC Website Contribution) AI Powered website</h3>
+                <img src="https://i.postimg.cc/8cG91m5m/ador-web.png" alt="project five">
+                <p>A Dose of Reveal is a dynamic podcast business website where I provide ongoing development and maintenance. As my first experience working with an AI-powered site builder, I frequently implement daily updates and content refinements based on the CEO's vision, ensuring a seamless digital presence.</p>
+                <a href="https://adoseofreveal.org/" class="btn" target="_blank">Explore the Site Here</a>
+              </div>
+              <div class="project">
+                <h3>A Dose of Reveal Wellness - Shopify E-commerence Shop</h3>
+                <img src="https://i.postimg.cc/05H712Bb/Capture90.png" alt="project six">
+                <p>Recognizing A Dose of Reveal's need for a robust online presence for their wellness products, I took the initiative to independently learn and implement a full Shopify e-commerce solution. This project demonstrates my ability to rapidly acquire new platform knowledge as I successfully designed, built, and launched the store from the ground up, managing everything from product catalog and payment integration to theme customization and order processing workflows.</p>
+                <a href="https://adoseofrevealwellness.myshopify.com/" class="btn" target="_blank">Visit The Live Store</a>
+              </div>
             </div>
-            <div class="project">
+          </section>
+          <!-- Slide 2: Frontend Development -->
+          <section class="project-group slide">
+            <h2>Frontend Development</h2>
+            <div class="project-section">
+              <div class="project">
+                <h3>Weather App</h3>
+                <img src="https://i.postimg.cc/1zg0kr7f/Weather-App-Google-Chrome2025-06-0213-46-10-ezgif-com-video-to-gif-converter.gif" alt="project three">
+                <p>This dynamic Weather Web Application provides real-time weather conditions for any city, elegantly combining data from two external APIs: OpenWeather Map and Unsplash. Users can simply type a city name to instantly receive current weather details, including temperature, humidity, and wind information, alongside a visually striking background image of that city related to its current weather conditions.</p>
+                <p>Note: This application is currently in its testing phase, with ongoing refinements to image accuracy and overall performance.</p>
+                <a href="https://weatherapp-nic-coder.netlify.app/" class="btn" target="_blank">View Live Demo</a>
+              </div>
+              <div class="project">
+                <h3>Productivity Web App: Level Up Your Day</h3>
+                <img src="https://i.postimg.cc/2SGyQ0vg/Screenrecording2025-06-166-52-19-PM-ezgif-com-video-to-gif-converter.gif" alt="project four">
+                <p>This interactive web application transforms daily tasks into an engaging experience by rewarding users with XP, motivational quotes, and positive GIFs upon task completion. Built entirely with HTML, CSS, and JavaScript, the app is designed to significantly boost user motivation and productivity.</p>
+                <a href="https://nicole-coder243.github.io/gamified-task-tracker/" class="btn" target="_blank">View Live Demo</a>
+              </div>
+            </div>
+          </section>
+          <!-- Slide 3: Creative & Fun Experiments -->
+          <section class="project-group slide">
+            <h2>Creative & Fun Experiments</h2>
+            <div class="project-section">
+              <div class="project">
+                <h3>Image Slider Show</h3>
+                <img src="https://i.postimg.cc/tgkMrx9v/Screenrecording2025-06-1512-24-24-PM-ezgif-com-video-to-gif-converter.gif" alt="project one">
+                <p> This is a automated Flowers slider show made with HTML and CSS. It showcases a beautiful collection of flowers with smooth transitions and animations. The slider automatically cycles through the images.</p>
+                </p>
+                <a href="https://codepen.io/Nicole-coder243/pen/ogXeOBv" class="btn" target="_blank">View Image Slider</a>
+              </div>
+              <div class="project">
                 <h3> Mockup Landing Page </h3>
-             <img src="https://i.postimg.cc/RhDdk7YG/Screenrecording2025-06-1512-27-09-PM-ezgif-com-video-to-gif-converter.gif" alt="project two">
-             <p>A landing page for a flower business made with Html and CSS.Note: This is a mockup idea for a flower shop landing website; as this is a mockup idea to showcase how my version of a landing page for a flower business can be. </p>
-             <a href="https://codepen.io/Nicole-coder243/pen/emNVNwa" class="btn" target="_blank">View Landing Page</a>
-        </div>
-        <div class="project">
-            <h3>Weather App</h3>
-            <img src="https://i.postimg.cc/1zg0kr7f/Weather-App-Google-Chrome2025-06-0213-46-10-ezgif-com-video-to-gif-converter.gif" alt="project three">
-            <p>This dynamic Weather Web Application provides real-time weather conditions for any city, elegantly combining data from two external APIs: OpenWeather Map and Unsplash. Users can simply type a city name to instantly receive current weather details, including temperature, humidity, and wind information, alongside a visually striking background image of that city related to its current weather conditions.</p>
-           <p>Note: This application is currently in its testing phase, with ongoing refinements to image accuracy and overall performance.</p>
-            <a href="https://weatherapp-nic-coder.netlify.app/" class="btn" target="_blank">View Live Demo</a>
-        </div>
+                <img src="https://i.postimg.cc/RhDdk7YG/Screenrecording2025-06-1512-27-09-PM-ezgif-com-video-to-gif-converter.gif" alt="project two">
+                <p>A landing page for a flower business made with Html and CSS.Note: This is a mockup idea for a flower shop landing website; as this is a mockup idea to showcase how my version of a landing page for a flower business can be. </p>
+                <a href="https://codepen.io/Nicole-coder243/pen/emNVNwa" class="btn" target="_blank">View Landing Page</a>
+              </div>
+              <div class="project">
+                <h3> CSS Art</h3>
+                <img src="https://i.postimg.cc/6qF3jvsW/Screenshot-2025-07-15-12-33-29-PM.png" alt="project three">
+                <p>I'm exploring Among Us CSS art, and I credit the DevTip youtube channel for guiding my start. As an new addition , this includes a mini crewmate version beside it  </p>
+                <a href="https://codepen.io/Nicole-coder243/pen/KwpxOrx" class="btn" target="_blank">View CSS Amongus Art</a>
+                <a href="https://www.youtube.com/@OfficialDevTips/videos" class="btn" target="_blank">Check out  their channel</a>
+              </div>
+              <div class="project">
+                <h3> Moon Loading Screen</h3>
+                <img src="https://i.postimg.cc/BQ6MPDWY/Screenrecording2025-07-1512-35-21-PM-ezgif-com-video-to-gif-converter.gif" alt="project three">
+                <p>A sleepy moon loading screen theme I wanted to try out using more with css animations and styles. </p>
+                <a href="https://codepen.io/Nicole-coder243/pen/OPVrgQr" class="btn" target="_blank">View Moon loading screen</a>
+              </div>
 
-        <div class="project">
-            <h3>Productivity Web App: Level Up Your Day</h3>
-            <img src="https://i.postimg.cc/2SGyQ0vg/Screenrecording2025-06-166-52-19-PM-ezgif-com-video-to-gif-converter.gif" alt="project four">
-            <p>This interactive web application transforms daily tasks into an engaging experience by rewarding users with XP, motivational quotes, and positive GIFs upon task completion. Built entirely with HTML, CSS, and JavaScript, the app is designed to significantly boost user motivation and productivity.</p>
-            <a href="https://nicole-coder243.github.io/gamified-task-tracker/" class="btn" target="_blank">View Live Demo</a>
+              <div class="project">
+                <h3> Motivation Dice</h3>
+                <img src="https://i.postimg.cc/rw8p8M7k/Screenrecording2025-07-1710-20-32-AM-ezgif-com-video-to-gif-converter.gif" alt="project three">
+                <p>A Dice design for giving yourself a mental break, This is an motivation Dice that provide a good amount of saying and short activites just for you. </p>
+                <a href="https://codepen.io/Nicole-coder243/pen/gbapZwq" class="btn" target="_blank">View Motivation Dice</a>
+              </div>
+            </div>
+          </section>
+        </div>
+        <button class="slider-arrow right">&#8594;</button>
+      </div>
     </div>
-    
-    </div>
-</div>
   </section>
   </body>
-    <footer id="footer">
-            <p>&copy; 2025 Makayla Sanders. All rights reserved.</p>
-            <p>Designed by Makayla ✨</p>
-        </footer>
-  </html>
+  <footer id="footer">
+    <p>&copy; 2025 Makayla Sanders. All rights reserved.</p>
+    <p>Designed by Makayla ✨</p>
+  </footer>
+  <script>
+    // Simple slider logic
+    const slides = document.querySelectorAll('.slide');
+    const leftArrow = document.querySelector('.slider-arrow.left');
+    const rightArrow = document.querySelector('.slider-arrow.right');
+    let current = 0;
+
+    function showSlide(idx) {
+      slides.forEach((slide, i) => {
+        slide.classList.toggle('active', i === idx);
+      });
+    }
+
+    leftArrow.addEventListener('click', () => {
+      current = (current - 1 + slides.length) % slides.length;
+      showSlide(current);
+    });
+
+    rightArrow.addEventListener('click', () => {
+      current = (current + 1) % slides.length;
+      showSlide(current);
+    });
+
+    showSlide(current);
+  </script>
+
+</html>
