--- a/work-projects.html
+++ b/work-projects.html
@@ -74,12 +74,12 @@
           </section>
           <!-- Slide 3: Creative & Fun Experiments -->
           <section class="project-group slide">
-            <h2>Creative & Fun Experiments</h2>
+            <h2>Creative & Fun Projects</h2>
             <div class="project-section">
               <div class="project">
                 <h3>Image Slider Show</h3>
                 <img src="https://i.postimg.cc/tgkMrx9v/Screenrecording2025-06-1512-24-24-PM-ezgif-com-video-to-gif-converter.gif" alt="project one">
-                <p> This is a automated Flowers slider show made with HTML and CSS. It showcases a beautiful collection of flowers with smooth transitions and animations. The slider automatically cycles through the images.</p>
+                <p> This is an automated Flowers slider show made with HTML and CSS. It showcases a beautiful collection of flowers with smooth transitions and animations. The slider automatically cycles through the images.</p>
                 </p>
                 <a href="https://codepen.io/Nicole-coder243/pen/ogXeOBv" class="btn" target="_blank">View Image Slider</a>
               </div>
