--- a/work-projects.html
+++ b/work-projects.html
@@ -46,7 +46,7 @@
                 <a href="https://adoseofreveal.org/" class="btn" target="_blank">Explore the Site Here</a>
               </div>
               <div class="project">
-                <h3>A Dose of Reveal Wellness - Shopify E-commerence Shop</h3>
+                <h3>A Dose of Reveal Wellness - Shopify E-commerce Shop</h3>
                 <img src="https://i.postimg.cc/05H712Bb/Capture90.png" alt="project six">
                 <p>Recognizing A Dose of Reveal's need for a robust online presence for their wellness products, I took the initiative to independently learn and implement a full Shopify e-commerce solution. This project demonstrates my ability to rapidly acquire new platform knowledge as I successfully designed, built, and launched the store from the ground up, managing everything from product catalog and payment integration to theme customization and order processing workflows.</p>
                 <a href="https://adoseofrevealwellness.myshopify.com/" class="btn" target="_blank">Visit The Live Store</a>
@@ -86,28 +86,34 @@
               <div class="project">
                 <h3> Mockup Landing Page </h3>
                 <img src="https://i.postimg.cc/RhDdk7YG/Screenrecording2025-06-1512-27-09-PM-ezgif-com-video-to-gif-converter.gif" alt="project two">
-                <p>A landing page for a flower business made with Html and CSS.Note: This is a mockup idea for a flower shop landing website; as this is a mockup idea to showcase how my version of a landing page for a flower business can be. </p>
+                <p>A landing page for a flower business made with HTML and CSS.Note: This is a mockup idea for a flower shop landing page; it showcases how my version of a landing page for a flower business can be. </p>
                 <a href="https://codepen.io/Nicole-coder243/pen/emNVNwa" class="btn" target="_blank">View Landing Page</a>
               </div>
               <div class="project">
                 <h3> CSS Art</h3>
                 <img src="https://i.postimg.cc/6qF3jvsW/Screenshot-2025-07-15-12-33-29-PM.png" alt="project three">
-                <p>I'm exploring Among Us CSS art, and I credit the DevTip youtube channel for guiding my start. As an new addition , this includes a mini crewmate version beside it  </p>
+                <p>I'm exploring Among Us CSS art, and I credit the DevTip YouTube channel for guiding my start. As a new addition, this includes a mini crewmate version beside it  </p>
                 <a href="https://codepen.io/Nicole-coder243/pen/KwpxOrx" class="btn" target="_blank">View CSS Amongus Art</a>
                 <a href="https://www.youtube.com/@OfficialDevTips/videos" class="btn" target="_blank">Check out  their channel</a>
               </div>
               <div class="project">
                 <h3> Moon Loading Screen</h3>
                 <img src="https://i.postimg.cc/BQ6MPDWY/Screenrecording2025-07-1512-35-21-PM-ezgif-com-video-to-gif-converter.gif" alt="project three">
-                <p>A sleepy moon loading screen theme I wanted to try out using more with css animations and styles. </p>
+                <p>A sleepy moon loading screen theme I wanted to try out using more with CSS animations and styles. </p>
                 <a href="https://codepen.io/Nicole-coder243/pen/OPVrgQr" class="btn" target="_blank">View Moon loading screen</a>
               </div>
 
               <div class="project">
                 <h3> Motivation Dice</h3>
                 <img src="https://i.postimg.cc/rw8p8M7k/Screenrecording2025-07-1710-20-32-AM-ezgif-com-video-to-gif-converter.gif" alt="project three">
-                <p>A Dice design for giving yourself a mental break, This is an motivation Dice that provide a good amount of saying and short activites just for you. </p>
+                <p>A Dice design for giving yourself a mental break. This is a motivational Dice that provides a good amount of sayings and short activities just for you. </p>
                 <a href="https://codepen.io/Nicole-coder243/pen/gbapZwq" class="btn" target="_blank">View Motivation Dice</a>
+              </div>
+              <div class="project">
+                <h3>Cupid Persona Mini Quiz</h3>
+                <img src="https://i.postimg.cc/9Qtp2Ncr/Screenrecording2025-07-287-48-06-AM-ezgif-com-video-to-gif-converter.gif" alt="project four">
+                <p>A mini Cupid quiz designed to reveal what type of Cupid you are! This fun challenge uses HTML, CSS, and JavaScript to create an interactive experience that tracks your answers and matches you with one of four unique personas: Classic Cupid, Sweetheart Cupid, Chill Cupid, or Spicy Cupid. </p>
+                <a href="https://nicole-coder243.github.io/cupid-persona-quiz/" class="btn" target="_blank">Take Quiz</a>
               </div>
             </div>
           </section>
@@ -122,7 +128,7 @@
     <p>Designed by Makayla ✨</p>
   </footer>
   <script>
-    // Simple slider logic
+    // Slider
     const slides = document.querySelectorAll('.slide');
     const leftArrow = document.querySelector('.slider-arrow.left');
     const rightArrow = document.querySelector('.slider-arrow.right');
