--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@
     <nav>
       <div class="nav-bar">
         <div class="pic">
-          <span>Makayla</span>
+        <a href="index.html"><span>Makayla's Portifilo</span></a>
         </div>
         <div class="links">
           <div class="link"><a href="index.html">Home</a></div>
-          <div class="link"><a href="about.html">About</a></div>
+          <div class="link"><a href="about.html">About Me</a></div>
           <div class="link"><a href="work-projects.html">Works & Projects</a></div>
-          <div class="link"><a href="programmming projects.html">Other Projects</a></div>
+          <div class="link"><a href="programmming projects.html">Code Projects</a></div>
           <div class="link"><a href="contact.html">Contact</a></div>
         </div>
       </div>
@@ -29,15 +29,33 @@
   </header>
     <section id="about">
             <h2>About Me</h2>
-            <p>
-        Hello! I'm Makayla, a creative and adaptable developer dedicated to crafting engaging web experiences. My passion lies in building interactive digital solutions, leveraging skills in Java, JavaScript, and UI/UX principles.
-       I have hands-on experience integrating AI tools and developing e-commerce platforms, always with a focus on delivering user-centered products. My Associate Degree in Electrical Engineering provides a unique lens for problem-solving and critical thinking, which I apply to every line of code and design choice.  
-       I'm fueled by continuous learning and excited to bring my innovative ideas and technical expertise to dynamic development teams.
-            </p>
-        </section>
-  </body>
+            <div class="about-content">
+              <img src="https://i.postimg.cc/jqp63hhH/20250918-142051.jpg" alt="about-image">
+              <div class="about-text">
+                <p>
+                  Hi, my name is Makayla. I’d describe myself as a creative and adaptable developer who enjoys making web experiences that feel engaging and interactive. I’m still growing in my journey, but I like to learn as I go and let my creativity flow into every project I take on.
+                  One of my proudest experiences has been working with my ongoing client, where I not only built an e-commerce platform but also helped them understand and use AI tools.
+                </p>
+
+                <p>
+                  I guided them on how to prompt their AI-powered website so it could manage updates and content, while I continue to oversee and refine the site. That experience alone made me want to dive deeper into web development — I started coding more with HTML, CSS, and a bit of JavaScript, which helped me grow my skills and better understand how AI-powered websites function.
+                </p>
+
+                <p>
+                  In general, I love what I do: designing, brainstorming for my next project, and exploring visual design ideas I can bring to life. I enjoy experimenting, staying curious, and finding creative ways to grow with every project I take on.
+                  I’m always excited to keep learning, take on new projects, and collaborate with others. If you’re looking for someone who’s eager, creative, and ready to contribute, I’d love to connect.
+                </p>
+                <a href="work-projects.html" class="btn" title="Click to see my work" style="text-align: center;">View Portifilo</a>
+              </div>
+            </div>
+    </section>
+    <section class="certifications">
+      <h3> Course certification</h3>
+      <img src="https://i.postimg.cc/MTWTM9mC/responsive-web-design-certification.png" alt="cert-1">
+    </section>
     <footer id="footer">
-            <p>&copy; 2025 Makayla Sanders. All rights reserved.</p>
-            <p>Designed by Makayla ✨</p>
-        </footer>
-  </html>
+      <p>&copy; 2025 Makayla Sanders. All rights reserved.</p>
+      <p>Designed & Built by Makayla S.✨</p>
+    </footer>
+  </body>
+</html>
