--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,13 @@
     <nav>
       <div class="nav-bar">
         <div class="pic">
-          <span>Makayla</span>
+        <a href="index.html"><span>Makayla's Portifilo</span></a>
         </div>
         <div class="links">
           <div class="link"><a href="index.html">Home</a></div>
-          <div class="link"><a href="about.html">About</a></div>
+          <div class="link"><a href="about.html">About Me</a></div>
           <div class="link"><a href="work-projects.html">Works & Projects</a></div>
-          <div class="link"><a href="programmming projects.html">Other Projects</a></div>
+          <div class="link"><a href="programmming projects.html">Code Projects</a></div>
           <div class="link"><a href="contact.html">Contact</a></div>
         </div>
       </div>
@@ -71,7 +71,7 @@
                         </li>
                         <li>
                             <a href="https://codepen.io/Nicole-coder243" target=_blank>
-                               <i class="fas fa-code"></i> Codepen
+                               <i class="fa-brands fa-codepen"></i> Codepen
                             </a>
                         </li>
                     </ul>
@@ -81,7 +81,7 @@
         </body>
           <footer id="footer">
             <p>&copy; 2025 Makayla Sanders. All rights reserved.</p>
-            <p>Designed by Makayla ✨</p>
+             <p>Designed & Built by Makayla S.✨</p>
         </footer>
 </html>
       
