--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <nav>
       <div class="nav-bar">
         <div class="pic">
-          <span>Makayla</span>
+        <a href="index.html"><span>Makayla's Portifilo</span></a>
         </div>
         <div class="links">
           <div class="link"><a href="index.html">Home</a></div>
-          <div class="link"><a href="about.html">About</a></div>
+          <div class="link"><a href="about.html">About Me</a></div>
           <div class="link"><a href="work-projects.html">Works & Projects</a></div>
-          <div class="link"><a href="programmming projects.html">Other Projects</a></div>
+          <div class="link"><a href="programmming projects.html">Code Projects</a></div>
           <div class="link"><a href="contact.html">Contact</a></div>
         </div>
       </div>
@@ -29,27 +29,28 @@
   </header>
   <section class="home">
     <div class="home-image">
-      <img src="https://i.postimg.cc/pdQ3RCcf/db17e38a1a518b324d1fdb25780e3112.jpg">
-      <!---use an pinterst image credit to lila world for the image-->
+      <img src="https://i.postimg.cc/jqp63hhH/20250918-142051.jpg">
+
     </div>
 
     <div class="home-content-section">
       <h1>HI, I'm <span>Makayla</span></h1>
       <h3 class="typing"> I am <span></span></h3>
-      <p> A creative and adaptable developer dedicated to crafting engaging web experiences. My passion lies in building interactive digital experinces, leveraging skills in Java and growing skill in HTML,CSS, and bit in JavaScript, and ultimately understanding UI/UX principles through my journey.</p>
+      <p> A creative and adaptable developer dedicated to crafting engaging web experiences. My passion lies in building interactive digital experinces, leveraging skills in Java and growing skill in HTML,CSS, and bit in JavaScript, and ultimately understanding UI/UX principles through my portfolio.</p>
       <div class="socials">
         <a href="https://www.linkedin.com/in/makayla-s-309921268/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/Nicole-coder243" target="_blank"><i class="fa-brands fa-github"></i></a>
-        <a href="mailto:makaylans03@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+        <a href="mailto:makaylans03@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+        <a href="https://codepen.io/Nicole-coder243" target="_blank"><i class="fa-brands fa-codepen"></i></a>
       </div>
-      <a href="contact.html" class="btn">Let's Collaborate</a>
+      <a href="contact.html" class="btn" title="Get in touch with me">Let's Collaborate</a>
+      <a href="about.html" class="btn" style="margin-left: 10px;" title="My Background">Learn About Me</a>
     </div>
   </section>
-
 </body>
-  <footer id="footer">
-            <p>&copy; 2025 Makayla Sanders. All rights reserved.</p>
-            <p>Designed by Makayla ✨</p>
-        </footer>
+<footer id="footer">
+  <p>&copy; 2025 Makayla Sanders. All rights reserved.</p>
+  <p>Designed & Built by Makayla S.✨</p>
+</footer>
 
 </html>
