--- a/programmming projects.html
+++ b/programmming projects.html
@@ -7,70 +7,75 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <title> Makayla Portifilo V2- Blog Page </title>
+  <title>Makayla Portfolio V2 - Other Projects</title>
 </head>
 
 <body>
   <header>
     <nav>
       <div class="nav-bar">
-        <div class="pic">
-          <span>Makayla</span>
+         <div class="pic">
+        <a href="index.html"><span>Makayla's Portifilo</span></a>
         </div>
         <div class="links">
           <div class="link"><a href="index.html">Home</a></div>
-          <div class="link"><a href="about.html">About</a></div>
+          <div class="link"><a href="about.html">About Me</a></div>
           <div class="link"><a href="work-projects.html">Works & Projects</a></div>
-          <div class="link"><a href="programmming projects.html">Other Projects</a></div>
+          <div class="link"><a href="programmming projects.html">Code Projects</a></div>
           <div class="link"><a href="contact.html">Contact</a></div>
         </div>
       </div>
     </nav>
   </header>
-  <section class="">
-    <div class="work-projects-content">
-      <h1>Other Projects</h1>
-      <p>Welcome to my Portifilo! This "other project section" is my java conceptual projects on  my java programming journey.</p>
-      <!--project section img and text-->
-      <div class="project-section">
+
+  <main>
+    <!-- Hero/Intro Section -->
+      <h1 class="code-title">Coding Projects</h1>
+      <p class="code-p">
+        Welcome to my portfolio! Here you'll find a selection of my Java conceptual projects, each representing a milestone in my programming journey. <br>These projects highlight my growth in Java fundamentals, problem-solving, and my ability to translate logic into interactive experiences.
+      </p>
+    <!-- Projects Section -->
+    <section class="project-section code-projects-row">
+      <h2>Featured Java Projects</h2>
+      <div class="code-projects-wrapper">
         <div class="project">
           <h3>Java Text Adventure Game</h3>
-          <p>A text adventure game in Java where choices determine the player's journey and outcomes. Can you escape the island? Wanna see where the island adventure takes you. 
-             This Java-based text adventure game showcases robust conditional logic and state management, where player choices directly determine branching narratives and unique outcomes. 
-            Designed to immerse players in a perilous island escape, the project demonstrates my ability to build complex decision-making pathways and manage dynamic game states based on user input.</p>
+          <img src="https://i.postimg.cc/VNYG5V6K/Main-java-Desktop-Visual-Studio-Code2025-02-1916-10-36-ezgif-com-video-to-gif-converter.gif" alt="code-img1">
+          <p>
+            A text adventure game in Java where choices determine the player's journey and outcomes. Can you escape the island? This project showcases robust conditional logic and state management, immersing players in a perilous island escape with branching narratives and unique outcomes.
+          </p>
           <a href="https://replit.com/@makaylans03/Escape-the-Island-Game" class="btn" target="_blank">Experience the Island Adventure on Replit</a>
         </div>
         <div class="project">
           <h3>Exception Handling Concept</h3>
-          <p>Developed in Java, this project highlights robust exception handling techniques through a simulated in-game environment. By utilizing custom exceptions, I demonstrate how to effectively anticipate and mitigate potential errors, preventing crashes and ensuring a seamless and reliable user experience. This showcases a commitment to defensive programming and application stability.</p>
+          <p>
+            Developed in Java, this project highlights robust exception handling techniques through a simulated in-game environment. By utilizing custom exceptions, I demonstrate how to effectively anticipate and mitigate potential errors, ensuring a seamless and reliable user experience.
+          </p>
           <a href="https://replit.com/@makaylans03/Expection-Handling#src/main/java/Main.java" class="btn" target="_blank">Run Code & See Output on Replit</a>
         </div>
         <div class="project">
           <h3>Cloud Hill Library Management System (Java OOP)</h3>
-          <p>This Java-based Library Management System vividly demonstrates my foundational understanding and practical application of Object-Oriented Programming (OOP) principles:
-            Encapsulation: Securely managing data for Book, Member, and Library objects with controlled access.
-            Inheritance: Establishing clear hierarchies for Librarian, Member, and Book, extending common functionalities.
-            Polymorphism: Overriding methods to enable specialized behaviors (e.g., Librarian logging book additions).
-            Abstraction: Providing user-friendly interactions while abstracting complex internal logic.
-            The system allows for comprehensive library operations, including adding/removing books, searching by title or author, member management, and book borrowing/returning functionalities. 
-            This project highlights my ability to design and build structured, maintainable Java applications.</p>
+          <img src="https://i.postimg.cc/Fs8T2B87/Capture-pic-code.png" alt="pic of code">
+          <p>
+            This Java-based Library Management System demonstrates my understanding and application of Object-Oriented Programming (OOP) principles: encapsulation, inheritance, polymorphism, and abstraction. The system supports comprehensive library operations, including book and member management, and highlights my ability to design structured, maintainable Java applications.
+          </p>
           <a href="https://replit.com/@makaylans03/Library-magament-sytem#src/main/Main.java" class="btn" target="_blank">Run System on Replit Now</a>
         </div>
         <div class="project">
-           <h3>Number Guessing Game: Java Logic to Web Application</h3>
-            <p>I initially developed the game in Java, focusing on fundamental programming constructs and the game's core guessing algorithm. 
-              Then, I independently re-implemented the identical game logic as an engaging HTML, CSS, and JavaScript web application, complete with an intuitive user interface. 
-              This project highlights my proficiency in both Java fundamentals and front-end web development, showcasing my adaptability and understanding of how to build interactive solutions from the ground up.</p>
-            <a href="https://codepen.io/Nicole-coder243/pen/emNvqWm" class="btn" target="_blank">Play Number Guessing updated Version Here</a>
-            <a href="https://github.com/Nicole-coder243/Number-Guessing-Game" class="btn" target="_blank">View Java Code on GitHub</a>
+          <h3>Number Guessing Game: Java Logic to Web Application</h3>
+          <p>
+            I initially developed the game in Java, focusing on fundamental programming constructs and the game's core guessing algorithm. I then re-implemented the identical logic as an engaging HTML, CSS, and JavaScript web application. This project highlights my proficiency in both Java fundamentals and front-end web development.
+          </p>
+          <a href="https://codepen.io/Nicole-coder243/pen/emNvqWm" class="btn" target="_blank">Play Number Guessing Web Version</a>
+          <a href="https://github.com/Nicole-coder243/Number-Guessing-Game" class="btn" target="_blank">View Java Code on GitHub</a>
         </div>
-        </div>
-        </div>
+      </div>
+    </section>
+  </main>
 
-  </section>
-  </body>
-    <footer id="footer">
-            <p>&copy; 2025 Makayla Sanders. All rights reserved.</p>
-            <p>Designed by Makayla ✨</p>
-        </footer>
-  </html>
+  <footer id="footer">
+    <p>&copy; 2025 Makayla Sanders. All rights reserved.</p>
+    <p>Designed & Built by Makayla S.✨</p>
+  </footer>
+</body>
+</html>
